--- a/static/css/sass/_mixins.scss
+++ b/static/css/sass/_mixins.scss
@@ -84,7 +84,7 @@
 }
 
 .bigpad {
-    padding: 30px;
+    padding: 20px;
 }
 
 .pad-h {
@@ -93,6 +93,6 @@
 }
 
 .bigpad-h {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
