--- a/static/css/sass/_tablet.scss
+++ b/static/css/sass/_tablet.scss
@@ -81,19 +81,6 @@
 			margin-right: -4vw;
 		}
 	}
-
-	.fishbowl {
-		position: relative;
-		margin: 0;
-
-		.fishbowl--inner {
-			position: absolute;
-			left: 0;
-			top:0;
-			right:0;
-			bottom:0;
-		}
-	}
 }
 
 .carousel {
